--- a/main.ipynb
+++ b/main.ipynb
@@ -61,6 +61,50 @@
     {
       "cell_type": "code",
       "source": [
+        "#Vendo os tipos das colunas no db\n",
+        "\n",
+        "print(db.info())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p6y1xNroBjsw",
+        "outputId": "4c6fc474-5b42-4d40-ee3c-f049e6d9a2f4"
+      },
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Int64Index: 704 entries, 6 to 890\n",
+            "Data columns (total 12 columns):\n",
+            " #   Column       Non-Null Count  Dtype  \n",
+            "---  ------       --------------  -----  \n",
+            " 0   PassengerId  704 non-null    int64  \n",
+            " 1   Pclass       704 non-null    int64  \n",
+            " 2   Name         704 non-null    object \n",
+            " 3   Sex          704 non-null    object \n",
+            " 4   Age          704 non-null    float64\n",
+            " 5   SibSp        704 non-null    int64  \n",
+            " 6   Parch        704 non-null    int64  \n",
+            " 7   Ticket       704 non-null    object \n",
+            " 8   Fare         704 non-null    float64\n",
+            " 9   Cabin        183 non-null    object \n",
+            " 10  Embarked     702 non-null    object \n",
+            " 11  Survived     704 non-null    int64  \n",
+            "dtypes: float64(2), int64(5), object(5)\n",
+            "memory usage: 71.5+ KB\n",
+            "None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Retirando os nulos de 'Age' e calculando a media.\n",
         "\n",
         "db= db.dropna(subset=['Age'])\n",
@@ -1195,20 +1239,20 @@
           "height": 310
         },
         "id": "q823ZFVS3Tps",
-        "outputId": "4f42ff29-b93e-45e6-a6a0-52ba07fdc292"
+        "outputId": "68a7557a-43e4-4835-e365-1b3f63485084"
       },
-      "execution_count": null,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \"\"\"Entry point for launching an IPython kernel.\n"
+            "  This is separate from the ipykernel package so we can avoid doing imports until\n"
           ]
         },
         {
@@ -1231,7 +1275,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d39d1e76-1414-4301-98e9-1f23a9c5736d\">\n",
+              "  <div id=\"df-8efd98d8-0d87-4e8c-8a26-313681da89fd\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1314,7 +1358,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d39d1e76-1414-4301-98e9-1f23a9c5736d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8efd98d8-0d87-4e8c-8a26-313681da89fd')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1365,12 +1409,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d39d1e76-1414-4301-98e9-1f23a9c5736d button.colab-df-convert');\n",
+              "          document.querySelector('#df-8efd98d8-0d87-4e8c-8a26-313681da89fd button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d39d1e76-1414-4301-98e9-1f23a9c5736d');\n",
+              "          const element = document.querySelector('#df-8efd98d8-0d87-4e8c-8a26-313681da89fd');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1393,7 +1437,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 102
+          "execution_count": 113
         }
       ]
     },
