--- a/main.ipynb
+++ b/main.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPKP4bActYUWfGcrtnFVoCb",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/AvivCozerAharon/ManipulandoDF/blob/main/main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -72,7 +84,7 @@
         "id": "p6y1xNroBjsw",
         "outputId": "4c6fc474-5b42-4d40-ee3c-f049e6d9a2f4"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1241,7 +1253,7 @@
         "id": "q823ZFVS3Tps",
         "outputId": "68a7557a-43e4-4835-e365-1b3f63485084"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
